# gpus-fuss

./: .gitignore  README.md  benchmark.py  presentation.aux  presentation.nav  presentation.tex  presentation.vrb  presentation_outline.md  pyproject.toml  visuals_todo.md
