[project]
name = "gpu-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "dhruvnigam93",email = "dhruv.nigam9@gmail.com3"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
